--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -35,8 +35,8 @@
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('ADMIN', 'MEMBER', 'SELLER')">
                         <li><a th:href="@{/member/logout}">로그아웃</a></li>
-                        <li><span th:text="${#authentication.principal.memberEntity.memberNickName}" class="data1 span"></span>님</li> <!-- 일반회원 닉네임 출력 -->
-<!--                        <li><span th:text="${member.memberNickName}" class="data1 span"></span>님</li> &lt;!&ndash; 일반회원 닉네임 출력 &ndash;&gt;-->
+<!--                        <li><span th:text="${#authentication.principal.memberEntity.memberNickName}" class="data1 span"></span>님</li> &lt;!&ndash; 일반회원 닉네임 출력 &ndash;&gt;-->
+                        <li><span th:text="${member.memberNickName}" class="data1 span"></span>님</li> <!-- 일반회원 닉네임 출력 -->
                         <!--프로필 이미지 출력-->
                         <li><a th:href="@{/member/detail/{memberId}(memberId=${#authentication.principal.memberEntity.memberId})}">
                             <div id="image-preview">
