--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -83,7 +83,7 @@
                     </form>
                 </div>
                 <div class="replyList">
-                    <div id="replyCon">
+                    <div id="replyCon" class="replyCon">
 
                     </div>
                 </div>
