--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,10 +23,13 @@
                 </div>
                 <div class="login-form">
 
+<!--                    <div class="adminBtn loginBtn">-->
+<!--                        <a href="/admin/index" class="loginA">관리자 로그인</a>-->
+<!--                    </div>-->
+                    <!--송원철-->
                     <div class="adminBtn loginBtn">
-                        <a href="/admin/index" class="loginA">관리자 로그인</a>
+                        <a th:href="@{/admin/login}" class="loginA">관리자 로그인</a>
                     </div>
-
                     <div class="loginBtn">
                         <a th:href="@{/member/login}" class="loginA">일반회원 로그인</a>
                     </div>
