inquiry write header에 연결

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
     <div class="chatbot">
         <div class="nav">
             <a href="">
-                <img th:src="@{/images/chatbot.png}" alt="">
+                <img th:src="@{/images/chatbot.png}" alt="" class="chat">
             </a>
         </div>
     </div>
