--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -96,14 +96,14 @@ html{
   justify-content: center;
   text-align: center;
 }
-.moveBtn .top .topBtn .moveBtnTop .img{
+.moveBtn .top .topBtn .moveBtnTop .img:not(.chat){
     /* width: 20px;
     height: 20px; */
   
     width: 30px;
     height: 30px;  
 }
-.moveBtn .top .topBtn .moveBtnBotton .img{
+.moveBtn .top .topBtn .moveBtnBotton .img:not(.chat){
     /* width: 20px;
     height: 20px; */
 
@@ -189,15 +189,16 @@ html{
   border: 2px solid #c5c5c5;
   border-radius: 50%;
   display: flex;
+  align-items: center
   flex-direction: column;
   justify-content: center;
   box-shadow: #BAADFF 0px 25px 50px -10px,
    #BAADFF 0px 15px 30px -15px,
     #BAADFF 0px -1px 3px 0px inset;
 }
-.chatbot .nav a img{
-  width: 40px;
-  height: 40px;
+.chatbot .nav a img.chatbot{
+  width: 10px;
+  height: 10px;
   background: transparent;
 }
 
