--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -179,6 +179,7 @@ html{
   text-shadow: 0px 0px 2px #644BDE;
   color: white;
 }
+
 /* chatbot 임시 설정*/
 .chatbot{
   position: fixed;
@@ -189,17 +190,24 @@ html{
   border: 2px solid #c5c5c5;
   border-radius: 50%;
   display: flex;
-  align-items: center
+  align-items: center;
   flex-direction: column;
   justify-content: center;
   box-shadow: #BAADFF 0px 25px 50px -10px,
    #BAADFF 0px 15px 30px -15px,
     #BAADFF 0px -1px 3px 0px inset;
 }
-.chatbot .nav a img.chatbot{
-  width: 10px;
-  height: 10px;
-  background: transparent;
+.chatbot .nav{
+    align-items: center;
+}
+.chatbot .nav a{
+    display: flex;
+    align-items: center;
+    border: 2px red;
+}
+.chatbot .nav a img.chat{
+  width: 85px;
+  height: 75px;
 }
 
 
