--- a/src/main/resources/templates/inquiry/update.html
+++ b/src/main/resources/templates/inquiry/update.html
@@ -27,8 +27,8 @@
                            </select>
                        </li>
                        <li>
-                            <label th:for="inquiryWriter">작성자</label>
-                            <input type="text" name="inquiryWriter" th:value="${inquiryDto.inquiryWriter}" readonly>
+                            <label th:for="memberEmail">작성자</label>
+                            <input type="text" name="memberEmail" th:value="${inquiryDto.memberEmail}" readonly>
                         </li>
                         <li>
                             <label th:for="inquiryTitle">제목</label>
