--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,9 +42,7 @@
 <!-- chatBot -->
     <div class="chatbot">
         <div class="nav">
-            <button onclick="chatBotPop()">
-                <img th:src="@{/images/chatbot.png}" alt="" class="chat">
-            </button>
+            <input type="image" th:src="@{/images/chatbot.png}" alt="" class="chat" id="thotbot" onclick="chatBotPop()">
         </div>
     </div>
 
