--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -200,15 +200,14 @@ html{
 .chatbot .nav{
     align-items: center;
 }
-.chatbot .nav button{
+.chatbot .nav .chat{
     display: flex;
     align-items: center;
     border: 2px red;
-}
-.chatbot .nav button img.chat{
   width: 85px;
   height: 75px;
 }
+
 
 
 .container{
