--- a/src/main/resources/templates/member/memberList.html
+++ b/src/main/resources/templates/member/memberList.html
@@ -8,6 +8,23 @@
 <body>
 <!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
 <div class="memberList">
+    <h1>회원 목록</h1>
+    <div class="search">
+        <form th:action="@{/member/search}" method="get">
+            <select name="subject" id="subject">
+                <option value="memberEmail">이메일</option>
+                <option value="memberName">이름</option>
+                <option value="memberNickName">닉네임</option>
+                <option value="memberPhone">휴대전화번호</option>
+                <option value="memberBirth">생년월일</option>
+                <option value="memberStreetAddress">도로명주소</option>
+                <option value="memberDetailAddress">상세주소</option>
+                <option value="role">권한</option>
+            </select>                                   <!-- MemberController의 @RequestParam의 String 'search' 값 그대로 입력하면 됨 -->
+            <input type="text" name="search" id="search" th:value="${param.search}" placeholder="검색어를 입력하세요"> <!-- th:value="${param.search}" : 검색어 입력후 실행하고 입력한 검색어 그대로 유지 -->
+            <input type="submit" value="검색">
+        </form>
+    </div>
     <table style="width:1700px;" align="center" border="1";>
         <thead>
         <tr>
@@ -32,7 +49,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="member : ${memberDtoList}">
+        <tr th:each="member : ${memberList}">
             <td><div id="image-preview"><img th:src="${member.imageUrl}" alt="프로필 이미지" style="width: 50px; height: 50px;"></div></td>
             <td th:text="${member.memberId}"></td>
             <td th:text="${member.memberEmail}"></td>
