--- a/src/main/resources/static/css/product/write.css
+++ b/src/main/resources/static/css/product/write.css
@@ -16,20 +16,115 @@
 .--hover2{
   border: 2px dashed #7286d3;
 }
+.--displayFalse {
+  display: none;
+}
 
 .container {
   /* background-color: #f0f2f5; */
 }
 
-.--displayFalse {
-  display: none;
+
+
+/* 공통적으로 사용되는 스타일 */
+.common_inputs {
+  box-sizing: border-box;
+  height: 75px;
+  width: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.productInputs {
+  width: 325px;
+  border: 1px solid #dddddd !important;
+  font-size: 1rem;
+  line-height: 1.45;
+  letter-spacing: -0.04rem;
+  border-radius: 8px;
+  padding: 16px;
+}
+.productInput-label {
+  /* display: inline-block; */
+  position: absolute;
+  top: 2px;
+  left: 12px;
+  /* padding: 8px; */
+  /* background: white; */
+  font-size: 14px;
+  color: #888;
+  font-weight: bold;
+  z-index: 1;
+}
+.productInput-label span {
+  color: #da4841;
+  vertical-align: -2px;
+}
+input::placeholder, textarea::placeholder {
+  color: #d9d9d9;
 }
 
-.autocomplete-active{
-  background-color: #7286d3;
-  color: #ffffff;
+
+
+
+
+
+.grid-wrapper {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 550px 50px 360px 50px 1fr;
+  grid-template-rows: 20px repeat(10, 100px);
+  position: relative;
 }
 
+
+
+.gridWrapper-prev-drop {
+  grid-area: 2 / 2 / 12 / 3;
+  position: sticky;
+  top: 20px;
+  height: 675px;
+  padding: 20px 0 20px 0;
+}
+.imagePreviewExpand-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.imagePreviewExpand-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
+  /* top: 30px; */
+  width: 500px;
+  height: 500px;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+}
+.imagePreviewExpand{
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+}
+.imagePreviewExpand-alt{
+  width: 200px;
+  height: 200px;
+  filter: 
+    invert(96%) 
+    sepia(0%) 
+    saturate(2405%) 
+    hue-rotate(71deg) 
+    brightness(89%) 
+    contrast(102%);
+}
+
+
+
+.imageDrop-wrapper {
+  /* position: relative;
+  top: 30px; */
+  margin: 20px 0 20px 0;
+}
 .image-container {
   margin: 0 auto;
   margin-top: 20px;
@@ -47,13 +142,11 @@
   position: relative;
   z-index: 0;
 }
-
 .image-dropbox-description-box{
   position: absolute;
   z-index: 1;
   width: inherit;
 }
-
 .image-dropbox-description{
   position: relative;
   top: 72px;
@@ -61,21 +154,47 @@
   font-weight: normal;
   color: #8c8c8c;
 }
-
 .image-preview-box-container{
   width: 520px;
   min-height: 104px;
   display: flex;
   position: relative;
   z-index: 2;
+  cursor: pointer;
 }
-
 .image-preview-box {
+  position: relative;
   width: 100px;
   height: 100px;
   margin: 2px;
 }
-
+.delete-icon {
+  /* background-color: #ffffff; */
+}
+.delete-img {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  top: -3px;
+  right: -3px;
+  filter: invert(57%) 
+          sepia(20%) 
+          saturate(1233%) 
+          hue-rotate(191deg) 
+          brightness(90%) 
+          contrast(81%);
+  z-index: 1;
+}
+.delete-background{
+  position: absolute;
+  height: 12px;
+  width: 12px;
+  top: 1px;
+  right: 1px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  z-index: 0;
+}
 .image-preview{
   width: 100px;
   height: 100px;
@@ -83,81 +202,22 @@
   box-sizing: border-box;
 }
 
-.add-image-box {
-  background-color: #949494;
-  color: #ffffff;
 
-  width: 100px;
-  height: 100px;
-  margin: 2px;
-  
-  display: flex;
-  justify-content: center; /* 가로 중앙 정렬 */
-  align-items: center; /* 세로 중앙 정렬 */
-  font-size: 10px; /* 텍스트 크기 설정 */
-}
 
-.add-image-box-ref {
-  width: 100px;
-  height: 100px;
-  margin: 2px;
-  display: flex;
-  justify-content: center; /* 가로 중앙 정렬 */
-  align-items: center; /* 세로 중앙 정렬 */
-}
 
-li img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-}
-
-li .delete-btn {
+/* category와 brand에서 공통적으로 사용되는 autocomplete 스타일 */
+#category-autocomplete-div, #brand-autocomplete-div {
   position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-}
-
-.imagePreviewExpand-box{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: 30px;
-  width: 500px;
-  height: 500px;
-  box-shadow: 0px 0px 3px 0px #b1b1b1;
-}
-
-.imagePreviewExpand{
-  width: 500px;
-  height: 500px;
-  object-fit: cover;
-}
-
-.imagePreviewExpand-alt{
-  width: 200px;
-  height: 200px;
-  filter: 
-    invert(96%) 
-    sepia(0%) 
-    saturate(2405%) 
-    hue-rotate(71deg) 
-    brightness(89%) 
-    contrast(102%);
-  object-fit: cover;
-}
-
-#autocomplete-list {
-  position: relative;
-  bottom: 8px;  
+  top: 64px;  
+  width: 357px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #ffffff;
-  z-index: 1;
+  z-index: 2;
 }
-
+#category-autocomplete-text-ul, #brand-autocomplete-text-ul {
+  padding: 10px;
+}
 .autocomplete-text-li {
   font-size: 8px;
   /* left: 8px; */
@@ -166,149 +226,65 @@ li .delete-btn {
   padding-top: 2px;
   padding-bottom: 2px;
 }
-
-.autocomplete-text-ul {
-  padding: 10px;
-}
-
-
-.productInputs-class {
-  box-sizing: border-box;
-  height: 75px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.productInputs {
-  width: 325px;
-  border: 1px solid #dddddd !important;
-  font-size: 1rem;
-  line-height: 1.45;
-  letter-spacing: -0.04rem;
-  border-radius: 8px;
-  padding: 16px;
-}
-
-input::placeholder, textarea::placeholder {
-  color: #d9d9d9;
-}
-
-.productInput-label {
-  /* display: inline-block; */
-  position: relative;
-  top: 21px;
-  left: 8px;
-  padding: 8px;
-  background: white;
-  font-size: 14px;
-  color: #888;
-  font-weight: bold;
-}
-
-.productInput-label span {
-  color: #da4841;
-  vertical-align: -1px;
-}
-
-.productInput-label2 {
-  /* display: inline-block; */
-  position: relative;
-  top: 11px;
-  left: 8px;
-  padding: 8px;
-  background: white;
-  font-size: 14px;
-  color: #888;
-  font-weight: bold;
-}
-
-.productInput-label2 span {
-  color: #da4841;
-  vertical-align: -1px;
-}
-
-.productDisplayInputs {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  height: 75px;
-}
-
-input[type="radio"] {
-  margin-left: 2px;
-  margin-right: 25px;
-}
-
-.productDescription-class {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.productDescription-class textarea {
-  width: 325px;
-  height: 180px;
-  resize: none;
-  border: 1px solid #dddddd !important;
-  font-size: 1rem;
-  line-height: 1.45;
-  letter-spacing: -0.04rem;
-  border-radius: 8px;
-  padding: 16px;
+.autocomplete-active{
+  background-color: #7286d3;
+  color: #ffffff;
 }
 
 
 
-
-.grid-wrapper {
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 550px 50px 350px 50px 1fr;
-  grid-template-rows: 20px repeat(10, 100px);
-}
-.gridWrapper-prev-drop {
-  grid-area: 2 / 2 / 12 / 3;
-  position: sticky;
-  top: 50px;
-  height: 675px;
-}
-.imagePreviewExpand-wrapper {
-  display: flex;
-  justify-content: center;
-}
-.imageDrop-wrapper {
-  position: relative;
-  top: 30px;
-}
-.grid-productBrandName {
+.grid-productCategoryName {
   grid-area: 2 / 4 / 3 / 5;
+  margin: auto;
 }
-.grid-productName {
+.productCategoryName-hole {
+  position: absolute;
+  height: 3px;
+  width: 82px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productBrandName {
   grid-area: 3 / 4 / 4 / 5;
+  margin: auto;
 }
-.grid-productColor {
+.productBrandName-hole {
+  position: absolute;
+  height: 3px;
+  width: 70px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productName {
   grid-area: 4 / 4 / 5 / 5;
+  margin: auto;
 }
-.grid-productSize {
+.productName-hole {
+  position: absolute;
+  height: 3px;
+  width: 59px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productColor {
   grid-area: 5 / 4 / 6 / 5;
+  margin: auto;
 }
-.grid-productPrice {
-  grid-area: 6 / 4 / 7 / 5;
-}
-.grid-productDisplay {
-  grid-area: 7 / 4 / 8 / 5;
-}
-.grid-productDescription {
-  grid-area: 8 / 4 / 11 / 5;
-}
-.grid-productSubmit {
-  grid-area: 11 / 4 / 12 / 5;
-}
-
-
-
 .productColorInputs {
   position: relative;
   width: 300px;
@@ -331,7 +307,6 @@ input[type="radio"] {
   position: inherit;
   top: 8px;
 }
-
 .productColorInputs input[type=radio]:checked+label{
   display: inline-block;
   cursor: pointer;
@@ -360,11 +335,9 @@ input[type="radio"] {
   background-repeat: no-repeat;
   background-size: 70%;
 }
-
 .colorRadioBtn{
   box-shadow: 0px 0px 3px 0px #b1b1b1;
 }
-
 .--black{
   background-color: #41444B;
 }
@@ -373,7 +346,7 @@ input[type="radio"] {
 }
 .--pink{
   background-color: #E97777;
-}
+}-ho
 .--orange{
   background-color: #EC8F6A;
 }
@@ -397,54 +370,259 @@ input[type="radio"] {
 }
 
 
+
+.grid-productSize {
+  grid-area: 6 / 4 / 7 / 5;
+  margin: auto;
+}
+.productSize-hole {
+  position: absolute;
+  height: 3px;
+  width: 83px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productPrice {
+  grid-area: 7 / 4 / 8 / 5;
+  margin: auto;
+}
+.productPrice-hole {
+  position: absolute;
+  height: 3px;
+  width: 71px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productDisplay {
+  grid-area: 8 / 4 / 9 / 5;
+  margin: auto;
+}
 .productDisplayInputs input[type=radio]{
   display: none;
 }
 .productDisplayInputs input[type=radio]+label{
-  display: inline-block;
-  cursor: pointer;
-  width: 100px;
-  height: 33px;
-  text-align: center; /* 텍스트 중앙 정렬 */
-  line-height: 32px; /* 텍스트 수직 중앙 정렬 */
-  position: relative;
-  top: 8px;
-  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  background-color: #ffffff;
   color: #888;
-  font-size: 14px;
-  font-weight:bold;
 }
 .productDisplayInputs input[type=radio]:checked+label{
+  background-color: #7286d3;
+  color: #ffffff;
+}
+.displayBtn1{
+  position: relative;
+  top: 8px;
+  width: 100px;
+  height: 33px;
+  text-align: center;
+  line-height: 32px;
+  font-size: 14px;
+  font-weight:bold;
+  border-radius: 8px 0 0 8px;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  cursor: pointer;
+}
+.displayBtn2{
+  position: relative;
+  top: 8px;
+  width: 100px;
+  height: 33px;
+  text-align: center;
+  line-height: 32px;
+  font-size: 14px;
+  font-weight:bold;
+  border-radius: 0 8px 8px 0;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  cursor: pointer;
+}
+
+
+
+.grid-productDescription {
+  grid-area: 9 / 4 / 12 / 5;
+  margin: auto;
+}
+.productDescriptionInputs {
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 360px; */
+  height: 297px;
+}
+.productDescriptionInputs textarea {
+  width: 325px;
+  height: 245px;
+  resize: none;
+  border: 1px solid #dddddd !important;
+  font-size: 1rem;
+  line-height: 1.45;
+  letter-spacing: -0.04rem;
+  border-radius: 8px;
+  padding: 16px;
+}
+.productInput-label2 {
+  /* display: inline-block; */
+  position: absolute;
+  top: -7px;
+  left: 12px;
+  /* padding: 8px; */
+  /* background: white; */
+  font-size: 14px;
+  color: #888;
+  font-weight: bold;
+  z-index: 1;
+}
+.productInput-label2 span {
+  color: #da4841;
+  vertical-align: -1px;
+}
+.productDescription-hole {
+  position: absolute;
+  height: 3px;
+  width: 71px;
+  top: 9px;
+  left: 6px;
+  background-color: #ffffff;
+  z-index: 0;
+}
+
+
+
+.grid-productSubmit {
+  grid-area: 12 / 4 / 13 / 5;
+  margin: auto;
+}
+.productSubmitBtn{
+  height: 75px;
+  width: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.productSubmit{
+  cursor: pointer;
+  display: none;
+}
+.productSubmit-label {
   display: inline-block;
   cursor: pointer;
-  width: 100px;
+  width: 200px;
   height: 34px;
   background-color: #7286d3;
   text-align: center; /* 텍스트 중앙 정렬 */
   line-height: 32px; /* 텍스트 수직 중앙 정렬 */
   position: relative;
   top: 8px;
+  border-radius: 8px 8px 8px 8px;
   box-shadow: 0px 0px 3px 0px #b1b1b1;
   color: #ffffff;
   font-size: 14px;
   font-weight:bold;
 }
-.displayBtn1{
-  border-radius: 8px 0 0 8px;
-}
-.displayBtn2{
-  border-radius: 0 8px 8px 0;
-}
 
 
 
 
-.productSubmit{
-  cursor: pointer;
-}
-.productSubmitBtn{
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .add-image-box {
+  background-color: #949494;
+  color: #ffffff;
+
+  width: 100px;
   height: 100px;
+  margin: 2px;
+  
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  font-size: 10px; 
+} */
+
+/* .add-image-box-ref {
+  width: 100px;
+  height: 100px;
+  margin: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
+
+/* li img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+} */
+
+/* li .delete-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* input[type="radio"] {
+  margin-left: 2px;
+  margin-right: 25px;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
