--- a/src/main/resources/static/css/notice/update.css
+++ b/src/main/resources/static/css/notice/update.css
@@ -183,3 +183,23 @@
     background-color: #DADFF3;
     color: white;
 }
+.container .update .update-con .update-form form>ul>li.Btn .button a{
+    width: 150px;
+    height: 30px;
+    display: flex;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #8C9CDB;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 0.3s;
+    background: transparent;
+}
+.container .update .update-con .update-form form>ul>li.Btn .button a:hover{
+    background-color: #DADFF3;
+    color: white;
+}
