--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>List</title>
-    <link rel="stylesheet" th:href="@{/css/product/list.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/product/list.css}">
     <link rel="stylesheet" href="maincss.css">
 </head>
 <body>
